src/test/deca/syntax/invalid/synt/tooMuchVBar.deca

{
    x ||| y;
}

// @expected_output deca:3:8: token recognition error
